# sentiric-knowledge-service

./: .dockerignore  .env.docker  .env.example  .gitignore  DEMO.md  Dockerfile  LOGIC.md  README.md  TASKS.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.service.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test.md
.github/workflows/: docker-publish.yml
app/: main.py
app/api/v1/: endpoints.py  query.py
app/core/: config.py  logging.py
app/db/: session.py
app/grpc_server/: service.py
app/loaders/: __init__.py  base.py  file_loader.py  google_travel_loader.py  postgres_loader.py  web_loader.py
app/services/: embedding_service.py  indexing_service.py  qdrant_service.py  query_service.py
app/static/: script.js
app/templates/: index.html
tests/: test_api.py
