[tool.poetry]
name = "sentiric-knowledge-service"
version = "0.1.0"
description = "Multi-tenant RAG service for the Sentiric Platform."
authors = ["Azmi ŞAHİN <6445951+azmisahin@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
structlog = "^24.1.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.4"
prometheus-fastapi-instrumentator = "^6.1.0"
qdrant-client = "^1.9.2"
sentence-transformers = "^3.0.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
playwright = "^1.44.0"
psycopg2-binary = "^2.9.9"
grpcio = "^1.64.1"
grpcio-tools = "^1.64.1"
protobuf = "^6.32.1"
sentiric-contracts-py = {git = "https://github.com/sentiric/sentiric-contracts.git", tag = "v1.8.11"}

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"